<resources>
    <string name="app_name">APOD Viewer</string>
    <string name="author">Deepto Debnath</string>
    <string name="app_desc">A simple app to view images from NASA\'s APOD service</string>
    <string name="app_large_desc">APOD Viewer is an open-source app that allows you to view APODs from NASA, as well as share, save and download them, or set them as wallpaper.</string>
    <string name="app_cr">Copyright © 2021  Deepto Debnath</string>
    <string name="app_src">https://github.com/dd1929/apod-viewer/</string>
    <string name="apod_title">Astronomy Picture Of the Day</string>
    <string name="apod_subtitle">NASA</string>
    <string name="apod_desc">Astronomy Picture Of the Day (APOD) is originated, written, coordinated and edited since 1995 by Robert Nemiroff and Jerry Bonnell. The APOD archive contains the largest collection of annotated astronomical images on the internet.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="copyright">Copyright: %1$s</string>
    <string name="libs_title">Libraries</string>
    <string name="libs">Thanks to these libraries for making my work easy!</string>
    <string name="date_picker_title">Pick date of APOD:</string>
    <string name="view_latest">View Latest APOD</string>
    <string name="details">APOD Details</string>
    <string name="settings">Settings</string>
    <string name="version">Version: %1$s (%2$d)</string>
    <string name="about">About</string>
    <string name="view_license">View License</string>
    <string name="view_full_license">View Full License</string>
    <string name="view_source">View Source Code</string>
    <string name="contribute">Contribute</string>
    <string name="main_apod_site">Main Site</string>
    <string name="about_apod">More About APOD</string>
    <string name="sad_face">:(</string>
    <string name="no_network">There seems to be no network connection. Try connecting to the Internet and retrying.</string>
    <string name="no_network_message">No Internet Connection :(</string>
    <string name="yes_network_message">Connected to Internet :)</string>
    <string name="share_image">Share APOD:</string>
    <string name="loading">Loading…</string>
    <string name="info">APOD Info</string>
    <string name="no_bookmarks">¯\\_(ツ)_/¯ \nNo Bookmarks</string>
    <string name="how_to_bookmark">Tap the bookmark button to bookmark an APOD</string>
    <string name="no_discover">You haven\'t discovered any APODs yet. Tap the button below to begin!</string>
    <string name="close">Close</string>
    <string name="new_apod">There is a new APOD</string>
    <string name="image_save_successful">Image saved to gallery!</string>
    <string name="image_save_unsuccessful">Image could not be saved!</string>
    <string name="image_share_unsuccessful">Image could not be shared!</string>
    <string name="image_set_as_unsuccessful">Image could not be set!</string>
    <string name="saving_image">Saving Image…</string>
    <string name="getting_image">Getting Image…</string>
    <string name="other_no_hd">HD version of this not available!</string>
    <string name="other_set_as">This cannot be set as wallpaper or other image!</string>
    <string name="other_save">This cannot be saved!</string>
    <string name="date">Find an APOD by date</string>
    <string name="refresh">Refresh</string>
    <string name="sort">Sort APODs</string>
    <string name="filter">Filter APODs</string>
    <string name="recent">Recent</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="api_settings">API</string>
    <string name="custom_api_key">Use a custom APOD API key from \nhttps://api.nasa.gov/</string>
    <string name="interface_settings">Interface</string>
    <string name="choose_theme">Choose App Theme</string>
    <string name="choose_view">Choose List Type</string>
    <string name="updates">Updates</string>
    <string name="updates_summary">Allow APOD Viewer to automatically check for new APODs and update the local database in the background</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_summary">Allow APOD Viewer to notify you of new APODs</string>
    <string name="auto_wallpaper">Auto Set Wallpaper</string>
    <string name="auto_wallpaper_summary">Allow APOD Viewer to automatically set new APODs as device wallpaper</string>
    <string name="auto_wallpaper_quality">Wallpaper Quality</string>
    <string name="auto_wallpaper_prompt">Do you want to set today\'s APOD as wallpaper now?</string>
    <string name="wallpaper_target">Set Wallpaper On</string>
    <string name="image_quality">Image Quality</string>
    <string name="image_save_quality">Default quality while saving image</string>
    <string name="image_share_quality">Default quality while sharing image</string>
    <string name="image_set_as_quality">Default quality while setting image as wallpaper or other photo</string>
    <string name="formatting">Formatting</string>
    <string name="text_formatting">Text formatting for APOD description</string>
    <string name="save_filename">Format for filenames while saving APODs</string>
    <string name="share_text_format">Format for text while sharing APODs</string>
    <string name="filename_default_format">APOD_&lt;DATE&gt;</string>
    <string name="share_text_default_format">&lt;TITLE&gt;\n\n&lt;DETAILS&gt;</string>
    <string name="storage">Storage</string>
    <string name="clear_database">Clear database</string>
    <string name="clear_database_summary">Clear local database of APOD data (does not clear cached images)</string>
    <string name="clearing_database">Clearing local database…</string>
    <string name="clear_database_successful">Successfully cleared local APOD database!</string>
    <string name="clear_image_cache">Clear cached images</string>
    <string name="clear_image_cache_summary">Clear locally cached images (does not clear local database of APODs)</string>
    <string name="clearing_image_cache">Clearing cached images…</string>
    <string name="clear_image_cache_successful">Successfully cleared cached images!</string>
    <string name="storage_permission_denied">Without granting access to storage, images cannot be saved to your device.</string>
    <string name="storage_permission_rationale">In order to save the image to your device, permission to access storage is required. Please grant it in order to save the image. You won\'t have to grant this again.</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="link_preview">Link Preview</string>
    <string name="link">Link: %1$s</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="save_pref">Save my preference</string>
    <string name="normal_quality">Normal Quality</string>
    <string name="high_quality">High Quality</string>
    <string name="high_quality_notice">The High Quality image for some APODs may be significantly different from the Normal Quality one. You can view the High Quality image in-app by using the [HD] button.</string>
    <string name="text_size">Font Size</string>
    <string name="text_typeface">Font Type</string>
    <string name="text_style">Font Style</string>
    <string name="normal">Normal</string>
    <string name="sans">Sans Serif</string>
    <string name="serif">Serif</string>
    <string name="mono">Monospace</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="text_size_error">Text size must be between 5 and 40</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_order">Sort Order</string>
    <string name="attr_title">APOD Title</string>
    <string name="attr_date">APOD Date</string>
    <string name="attr_copyright">APOD Copyright</string>
    <string name="attr_details">APOD Details</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="filter_media_type">Filter Media Type</string>
    <string name="filter_copyright">Filter Copyright</string>
    <string name="show_images">Show Images</string>
    <string name="show_videos">Show Videos and Other Media</string>
    <string name="show_copyright">Show APODs with Copyright</string>
    <string name="show_no_copyright">Show APODs without Copyright</string>
    <string name="month_year_dummy_text">Month Year</string>
    <string name="newest_month">Latest Month</string>
    <string name="newer_month">Next Month</string>
    <string name="older_month">Previous Month</string>
    <string name="oldest_month">Oldest Month</string>
    <string name="search_hint">Search APODs</string>
    <string name="visit_website">Visit Website</string>
    <string name="faq">FAQ</string>
    <string name="author_title">Author</string>
    <string name="github">GitHub</string>
    <string name="email">Email</string>
    <string name="telegram">Telegram</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_text">This app is not endorsed by NASA.</string>
    <string name="img_license_title">Imagery Licenses</string>
    <string name="img_license_text"><![CDATA[All APODs are credited to the owner or institution where they originated. Some of the images are copyrighted and to use these pictures publicly or commercially one must write to the owners for permission. For more information, go <a href="https://apod.nasa.gov/apod/lib/about_apod.html#srapply">here</a>.<br><br>The image of Saturn used here (beside the APOD description at the top of this page) is from NASA and can be found <a href="https://solarsystem.nasa.gov/resources/663/saturn-taken-from-voyager-2/">here</a>.<br><br><br>All icons used in this app, excluding the app icon (Saturn icon), and the GitHub and Telegram icons, are from <a href="https://fonts.google.com/icons?selected=Material+Icons">Google\'s Material Design Icons</a>, used under the <a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache License v2.0</a>.<br><br>The GitHub icon has been used from GitHub, and the same can be found <a href="https://github.com/logos">here</a>.<br><br>The Telegram icon has been used from Telegram, and the same can be found <a href="https://telegram.org/tour/screenshots>here</a>.<br><br><br>The app icon (Saturn icon) has been designed by Deepto Debnath.]]></string>
    <string name="special_thanks_title">Special thanks to the following for making my work easy!</string>
    <string name="view_high_quality">View High Quality Version</string>
    <string name="view_in_browser">View in Browser</string>
    <string name="set_as">Set APOD As</string>
    <string name="bookmark_apod">Bookmark this APOD</string>
    <string name="save">Save to device</string>
    <string name="share">Share</string>
</resources>